--- a/src/seamless_communication/cards/nar_t2u_aligner.yaml
+++ b/src/seamless_communication/cards/nar_t2u_aligner.yaml
@@ -5,7 +5,7 @@
 # MIT_LICENSE file in the root directory of this source tree.
 
 name: nar_t2u_aligner
-char_tokenizer: "https://huggingface.co/facebook/seamless-streaming/resolve/main/spm_char_lang38_tc.model"
+char_tokenizer: "https://huggingface.co/Rudaw/sentencepiece_char_lang40/blob/main/sentencepiece_char_lang40.model"
 model_type: unity2_aligner
 model_arch: nar_t2u_aligner
 checkpoint: "https://dl.fbaipublicfiles.com/seamless/models/unity2_aligner.pt"
@@ -49,3 +49,5 @@ unit_langs:
   - urd
   - uzn
   - vie
+  - ckb
+  - ku
