--- a/src/seamless_communication/cards/seamlessM4T_v2_large.yaml
+++ b/src/seamless_communication/cards/seamlessM4T_v2_large.yaml
@@ -7,7 +7,7 @@
 name: seamlessM4T_v2_large
 base: unity_nllb-100
 model_arch: base_v2
-char_tokenizer: "https://huggingface.co/facebook/seamless-m4t-v2-large/resolve/main/spm_char_lang38_tc.model"
+char_tokenizer: "https://huggingface.co/Rudaw/sentencepiece_char_lang40/blob/main/sentencepiece_char_lang40.model"
 checkpoint: "https://huggingface.co/facebook/seamless-m4t-v2-large/resolve/main/seamlessM4T_v2_large.pt"
 num_units: 10000
 unit_langs:
@@ -49,3 +49,5 @@ unit_langs:
   - urd
   - uzn
   - vie
+  - ckb
+  - ku
