--- a/src/seamless_communication/cards/seamless_expressivity.yaml
+++ b/src/seamless_communication/cards/seamless_expressivity.yaml
@@ -7,7 +7,7 @@
 name: seamless_expressivity
 base: unity_nllb-100
 model_arch: expressivity_v2
-char_tokenizer: "https://huggingface.co/facebook/seamless-streaming/resolve/main/spm_char_lang38_tc.model"
+char_tokenizer: "https://huggingface.co/Rudaw/sentencepiece_char_lang40/blob/main/sentencepiece_char_lang40.model"
 checkpoint: "https://github.com/facebookresearch/seamless_communication;gated=true"
 num_units: 10000
 unit_langs:
@@ -49,3 +49,5 @@ unit_langs:
   - urd
   - uzn
   - vie
+  - ckb
+  - ku
